[gd_scene load_steps=16 format=2]

[ext_resource path="res://art/knight-sheet.png" type="Texture" id=1]
[ext_resource path="res://Knight.gd" type="Script" id=2]
[ext_resource path="res://weapons/stormbreaker.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/hppot.png" type="Texture" id=4]
[ext_resource path="res://weapons/sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://weapons/crossbowpo.tscn" type="PackedScene" id=6]
[ext_resource path="res://weapons/szablya.tscn" type="PackedScene" id=7]
[ext_resource path="res://weapons/ladzsavill.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 17.827

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "dodge"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.15836, 22.501 )

[node name="Knight" type="KinematicBody2D"]
light_mask = 525
scale = Vector2( 0.8, 0.8 )
z_index = 10
collision_layer = 16909
collision_mask = 16909
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.764706, 0.847059, 0.92549, 1 )
self_modulate = Color( 0.894118, 0.690196, 0.690196, 1 )
position = Vector2( 3.21414, -0.147416 )
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 8
region_rect = Rect2( -6, 0, 449.225, 185.717 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 525
position = Vector2( 0.0439072, 0.0906601 )
shape = SubResource( 1 )

[node name="Bar" type="ColorRect" parent="."]
visible = false
margin_left = -10.2871
margin_top = -14.3764
margin_right = 19.7129
margin_bottom = -13.3764
rect_rotation = 90.0
color = Color( 0.180392, 0.282353, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/dodge = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="hitbox" type="Area2D" parent="."]
visible = false
light_mask = 5
collision_layer = 37
collision_mask = 37

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
light_mask = 37
position = Vector2( -2.16797, 0.806829 )
shape = SubResource( 7 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="stamina" type="ColorRect" parent="."]
visible = false
margin_left = -3.56864
margin_top = -16.3604
margin_right = 26.4314
margin_bottom = -15.3604
rect_rotation = 90.0
color = Color( 0.301961, 0.756863, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="mouth" type="Position2D" parent="."]
visible = false
position = Vector2( 32.7607, 0.225937 )

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.3

[node name="candodgetimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="bullet" type="Node" parent="."]

[node name="dodgetimer" type="Timer" parent="."]
wait_time = 0.1

[node name="stamtimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hppot" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 4 )
hframes = 2
frame = 1

[node name="hpottimer" type="Timer" parent="hppot"]
wait_time = 10.0
one_shot = true

[node name="ScentTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="stormbreaker" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0.0143738, -0.182076 )

[node name="sword" parent="." instance=ExtResource( 5 )]
visible = false

[node name="crossbowpo" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 8.06309, -16.1659 )
scale = Vector2( 1.00696, 1 )
z_index = -1

[node name="ladzsavill" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 0.384847, 0.132923 )
z_index = -1

[node name="szablya" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1.71078, -3.8345 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_shape_entered" from="hitbox" to="." method="_on_hitbox_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
[connection signal="timeout" from="candodgetimer" to="." method="_on_candodgetimer_timeout"]
[connection signal="timeout" from="dodgetimer" to="." method="_on_dodgetimer_timeout"]
[connection signal="timeout" from="stamtimer" to="." method="_on_stamtimer_timeout"]
[connection signal="timeout" from="hppot/hpottimer" to="." method="_on_hpottimer_timeout"]
